--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,23 +2,33 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *" # runs every day
+    - cron: "0 0 * * *"   # every day at midnight UTC
   workflow_dispatch:
 
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
+      # 1️⃣ Checkout your repo so we can push commits
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # 2️⃣ Create the dist/ directory
+      - name: Create dist directory
+        run: mkdir -p dist
+
+      # 3️⃣ Generate the snake SVGs into dist/
       - name: Generate GitHub Contributions Snake
         uses: Platane/snk@master
         with:
-          github_user_name: NarendraSinghChilwal
+          github_user_name: narendrasinghchilwal   # your exact GitHub handle
           outputs: |
             dist/github-snake.svg
             dist/github-snake-dark.svg?palette=github-dark
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      # 4️⃣ Push the generated files to the `output` branch
       - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
