Update snake action inputs to svg_out_path

--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -9,26 +9,31 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      # 1️⃣ Checkout your repo so we can push commits
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2️⃣ Create the dist/ directory
       - name: Create dist directory
         run: mkdir -p dist
 
-      # 3️⃣ Generate the snake SVGs into dist/
-      - name: Generate GitHub Contributions Snake
+      # Light mode SVG
+      - name: Generate Light Snake SVG
         uses: Platane/snk@master
         with:
-          github_user_name: narendrasinghchilwal   # your exact GitHub handle
-          outputs: |
-            dist/github-snake.svg
-            dist/github-snake-dark.svg?palette=github-dark
+          github_user_name: narendrasinghchilwal
+          svg_out_path: dist/github-snake.svg
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # 4️⃣ Push the generated files to the `output` branch
+      # Dark mode SVG
+      - name: Generate Dark Snake SVG
+        uses: Platane/snk@master
+        with:
+          github_user_name: narendrasinghchilwal
+          svg_out_path: dist/github-snake-dark.svg
+          args: --palette github-dark
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
